@@ -3,6 +3,7 @@
 * Development
 
 - compat-27: Drop obsolete ~compat-call dired-get-marked-files~.
+- compat-28: Add ~process-lines-handling-status~ and ~process-lines-ignore-status~.
 
 * Release of "Compat" Version 29.1.3.3
 
